added jinga language template to users.html file to loop through user items in collection and modified typo in trails.html

--- a/templates/trails.html
+++ b/templates/trails.html
@@ -14,7 +14,7 @@
         {{ trails.trail_description }}<br>
         {{ trails.trail_difficulty }}<br>
         {{ trails.trail_directions }}<br>
-        {{ trails.ttrail_elevation }}<br>
+        {{ trails.trail_elevation }}<br>
         {{ trails.trail_images }}<br>
         {{ trails.trail_length }}<br>
         {{ trails.trail_time }}<br>
