--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comments</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+
+    <h2>Extension of base template heading</h2>
+    
     {% for comment in comments %}
         {{ comments.trailmixer_id }}<br>
         {{ comments.comment_text }}<br>
         {{ comments.comment_date }}<br>
         {{ comments.comment_created_by }}<br>
     {% endfor %}
-</body>
-</html>
+
+{% endblock %}
