--- a/templates/base.html
+++ b/templates/base.html
@@ -16,25 +16,24 @@
     
     <header>
     <!-- main navbar --> 
-        <nav>
+        <nav class="nav-extended text-shadow  teal darken-3">
             <div class="nav-wrapper">
-              <a href="#!" class="brand-logo">Logo</a>
-              <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <a href="{{ url_for('get_base') }}" class="brand-logo">TrailMixer</a>
+              <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">Javascript</a></li>
-                <li><a href="mobile.html">Mobile</a></li>
+                <li><a href="{{ url_for('get_base') }}">Home</a></li>
+                <li><a href="#">Sign In</a></li>
+                <li><a href="#">Register</a></li>
               </ul>
             </div>
           </nav>
     
     <!-- mobile side navbar -->    
           <ul class="sidenav" id="mobile-demo">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">Javascript</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
+            <li><h4 class="center-align light-blue-text text-darken 4">TrailMixer</h4></li>
+            <li><a href="{{ url_for('get_base') }}">Home</a></li>
+            <li><a href="#">Sign In</a></li>
+            <li><a href="#">Register</a></li>
           </ul>
     </header>
     
@@ -50,3 +49,4 @@
 
 </body>
 </html>
+
