added url_for on base.html for registration page

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
               <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('get_base') }}">Home</a></li>
                 <li><a href="#">Sign In</a></li>
-                <li><a href="#">Register</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
               </ul>
             </div>
           </nav>
@@ -33,7 +33,7 @@
             <li><h4 class="center-align light-blue-text text-darken 4">TrailMixer</h4></li>
             <li><a href="{{ url_for('get_base') }}">Home</a></li>
             <li><a href="#">Sign In</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
           </ul>
     </header>
     
