inserted input fields to form on registration page

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <!-- main navbar --> 
         <nav class="nav-extended text-shadow  teal darken-3">
             <div class="nav-wrapper">
-                <a href="{{ url_for('get_base') }}" class="brand-logo">TrailMixer</a>
+                <a href="{{ url_for('get_base') }}" class="brand-logo">TrailMixer <i class="fab fa-pagelines"></i></a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('get_base') }}">Home</a></li>
