--- a/templates/register.html
+++ b/templates/register.html
@@ -7,10 +7,55 @@
       <div class="card-panel">
         <div class="row">
             <div class="input-field col s12">
-            <i class="fas fa-user-plus prefix teal darken-3"></i>
+            <i class="prefix teal darken-3"></i>
             <input id="first_name" name="first_name" type="text" class="validate">
             <label for="first_name">First Name</label>
           </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+            <i class="prefix teal darken-3"></i>
+            <input id="last_name" name="last_name" type="text" class="validate">
+            <label for="last_name">Last Name</label>
+          </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+            <i class="prefix teal darken-3"></i>
+            <input id="email" name="email" type="email" class="validate">
+            <label for="email">Email</label>
+          </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+            <i class="prefix teal darken-3"></i>
+            <input id="username" name="username" type="text" class="validate">
+            <label for="username">Username</label>
+          </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+            <i class="prefix teal darken-3"></i>
+            <input id="password" name="password" type="password" class="validate">
+            <label for="password">Password</label>
+          </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+            <i class="prefix teal darken-3"></i>
+            <input id="confirm_password" name="confirm_password" type="password" class="validate">
+            <label for="confirm_password">Confirm Password</label>
+          </div>
+        </div>
+        <div class="row">
+            <button type="submit" class="col s12 btn-large teal darken-3 text-shadow">
+                Register <i class="fab fa-pagelines"></i>
+            </button>
         </div>
       </div>
     </form>
