inserted comments on registration page for clarity

--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,8 @@
 <div class="row">
     <form class="col s12 m8 offset-m2">
       <div class="card-panel">
+          
+        <!-- Enter First Name-->
         <div class="row">
             <div class="input-field col s12">
             <i class="prefix teal darken-3"></i>
@@ -12,7 +14,7 @@
             <label for="first_name">First Name</label>
           </div>
         </div>
-
+        <!-- Enter last name-->
         <div class="row">
             <div class="input-field col s12">
             <i class="prefix teal darken-3"></i>
@@ -20,7 +22,7 @@
             <label for="last_name">Last Name</label>
           </div>
         </div>
-
+        <!-- Email-->
         <div class="row">
             <div class="input-field col s12">
             <i class="prefix teal darken-3"></i>
@@ -28,7 +30,7 @@
             <label for="email">Email</label>
           </div>
         </div>
-
+        <!-- Username-->
         <div class="row">
             <div class="input-field col s12">
             <i class="prefix teal darken-3"></i>
@@ -36,7 +38,7 @@
             <label for="username">Username</label>
           </div>
         </div>
-
+        <!-- Password-->
         <div class="row">
             <div class="input-field col s12">
             <i class="prefix teal darken-3"></i>
@@ -44,7 +46,7 @@
             <label for="password">Password</label>
           </div>
         </div>
-
+        <!-- Confirm Password-->
         <div class="row">
             <div class="input-field col s12">
             <i class="prefix teal darken-3"></i>
@@ -52,6 +54,7 @@
             <label for="confirm_password">Confirm Password</label>
           </div>
         </div>
+        <!-- Register button-->
         <div class="row">
             <button type="submit" class="col s12 btn-large teal darken-3 text-shadow">
                 Register <i class="fab fa-pagelines"></i>
