--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="input-field col s12">
             <i class="prefix teal darken-3"></i>
-            <input id="username" name="username" type="text" class="validate">
+            <input id="username" name="username" type="text" min-length="5" max-length="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
             <label for="username">Username</label>
           </div>
         </div>
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="input-field col s12">
             <i class="prefix teal darken-3"></i>
-            <input id="password" name="password" type="password" class="validate">
+            <input id="password" name="password" type="password" min-length="5" max-length="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
             <label for="password">Password</label>
           </div>
         </div>
