--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class = "center-align">Register</h3>
+<h3 class = "center-align">Log In</h3>
 <div class="row">
-    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
       <div class="card-panel">
 
         <!-- Enter First Name-->
         <div class="row">
             <div class="input-field col s12">
-            <i class="prefix teal darken-3"></i>
+            <i class="fa user-cog prefix teal darken-3"></i>
             <input id="first_name" name="first_name" type="text" class="validate">
             <label for="first_name">First Name</label>
           </div>
@@ -54,10 +54,10 @@
             <label for="confirm_password">Confirm Password</label>
           </div>
         </div>
-        <!-- Register button-->
+        <!-- Log In button-->
         <div class="row">
             <button type="submit" class="col s12 btn-large teal darken-3 text-shadow">
-                Register <i class="fab fa-pagelines"></i>
+                Log In <i class="fab fa-pagelines"></i>
             </button>
         </div>
       </div>
@@ -67,8 +67,8 @@
   <div class="row">
     <div class="col s12">
         <p class="center-align">
-            Already registered?
-            <a href="{{ url_for('login') }}" class="teal darken-3">Log In</a>
+            New Here?
+            <a href="{{ url_for('register') }}" class="teal darken-3">Register Account</a>
         </p>
     </div>
 </div>
