renamed login.html to sign_in.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
               <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('get_base') }}">Home</a></li>
-                <li><a href="#">Sign In</a></li>
+                <li><a href="{{ url_for('sign_in) }}">Sign In</a></li>
                 <li><a href="{{ url_for('register') }}">Register</a></li>
               </ul>
             </div>
@@ -32,7 +32,7 @@
           <ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-blue-text text-darken 4">TrailMixer</h4></li>
             <li><a href="{{ url_for('get_base') }}">Home</a></li>
-            <li><a href="#">Sign In</a></li>
+            <li><a href="{{ url_for('sign_in) }}">Sign In</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
           </ul>
     </header>
