--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
                 <a href="{{ url_for('get_base') }}" class="brand-logo">TrailMixer <i class="fab fa-pagelines"></i></a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('get_base') }}">Home</a></li>
+                <li><a href="{{ url_for('') }}">Home</a></li>
                 <li><a href="{{ url_for('sign_in) }}">Sign In</a></li>
                 <li><a href="{{ url_for('register') }}">Register</a></li>
               </ul>
