--- a/templates/add_trail.html
+++ b/templates/add_trail.html
@@ -9,16 +9,37 @@
         <form class="col s12" method="POST" action="">
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-user-circle prefix light-blue-text text-darken-4"></i>
-                    <input id="icon_prefix" type="text" class="validate">
-                    <label for="icon_prefix">First Name</label>
-                </div>
-                <div class="input-field col s12">
-                    <i class="fas fa-phone prefix light-blue-text text-darken-4"></i>
-                    <input id="icon_telephone" type="tel" class="validate">
-                    <label for="icon_telephone">Telephone</label>
+                    <i class="prefix light-blue-text text-darken-4"></i>
+                    <input id="trail_title" name="trail_title" minlength="5" maxlength="50"
+                    type="text" class="validate" required>
+                    <label for="trail_title">Title</label>
                 </div>
             </div>
+                
+            <div class="row">    
+                <div class="input-field col s12">
+                    <i class="prefix light-blue-text text-darken-4"></i>
+                    <input id="trail_address"  name="trail_address" minlength="5" maxlength="50"
+                    type="text" class="validate required">
+                    <label for="trail_address">Address</label>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="prefix light-blue-text text-darken-4"></i>
+                    <textarea id="trail_description" name="trail_description" minlength="5"
+                        maxlength="200" class="materialize-textarea validate" required></textarea>
+                    <label for="trail_description">Trail Description</label>
+                </div>
+
+            <div class="row">
+                <div class="input-field col s12">
+                        <i class="prefix light-blue-text text-darken-4"></i>
+                        <textarea id="trail_directions" name="trail_directions" minlength="5"
+                            maxlength="200" class="materialize-textarea validate" required></textarea>
+                        <label for="trail_directions">Trail Directions</label>
+                </div>
         </form>
     </div>
 
