added materialze select option for difficulty level

--- a/templates/add_trail.html
+++ b/templates/add_trail.html
@@ -24,6 +24,20 @@
                     <label for="trail_address">Address</label>
                 </div>
             </div>
+
+            <div class="row">  
+                <div class="input-field col s12 browser-default ">
+                    <i class="prefix light-blue-text text-darken-4"></i>
+                    <input id="trail_difficulty" name="trail_difficulty"
+                    type="text" class="validate" required>
+                    <label for="trail_difficulty">Trail Difficulty</label>
+                <select>
+                  <option value="" disabled selected></option>
+                  <option value="1">Easy</option>
+                  <option value="2">Moderate</option>
+                  <option value="3">Hard</option>
+                </select>
+            </div>
             
             <div class="row">
                 <div class="input-field col s12">
