--- a/templates/add_trail.html
+++ b/templates/add_trail.html
@@ -7,6 +7,7 @@
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="">
+        <!-- trail title -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="prefix light-blue-text text-darken-4"></i>
@@ -15,7 +16,7 @@
                     <label for="trail_title">Title</label>
                 </div>
             </div>
-                
+         <!-- trail address -->       
             <div class="row">    
                 <div class="input-field col s12">
                     <i class="prefix light-blue-text text-darken-4"></i>
@@ -24,7 +25,7 @@
                     <label for="trail_address">Address</label>
                 </div>
             </div>
-
+        <!-- trail difficulty -->
             <div class="row">  
                 <div class="input-field col s12 browser-default ">
                     <i class="prefix light-blue-text text-darken-4"></i>
@@ -38,7 +39,7 @@
                   <option value="3">Hard</option>
                 </select>
             </div>
-            
+        <!-- trail description -->    
             <div class="row">
                 <div class="input-field col s12">
                     <i class="prefix light-blue-text text-darken-4"></i>
@@ -47,7 +48,7 @@
                     <label for="trail_description">Trail Description</label>
                 </div>
             </div>
-            
+        <!-- trail directions -->    
             <div class="row">
                     <div class="input-field col s12">
                         <i class="prefix light-blue-text text-darken-4"></i>
@@ -56,7 +57,7 @@
                             <label for="trail_directions">Trail Directions</label>
                     </div>
             </div>
-            
+        <!-- upload photo -->    
             <div class="row">
                 <form action="#">
                     <div class="file-field col s12 browser-default ">
@@ -68,21 +69,29 @@
                         <input class="file-path validate">
                       </div>
                     </div>
-
-                    <div class="row">
-                        <form action="#">
-                            <div class="file-field col s12 browser-default ">
-                              <div class="btn">
-                                <span>Upload Map</span>
-                                <input type="file">
-                              </div>
-                              <div class="file-path-wrapper">
-                                <input class="file-path validate">
-                              </div>
-                            </div>
-                  </form>
+        <!-- upload map -->
+            <div class="row">
+                <form action="#">
+                    <div class="file-field col s12 browser-default ">
+                        <div class="btn">
+                            <span>Upload Map</span>
+                            <input type="file">
+                        </div>
+                        <div class="file-path-wrapper">
+                             <input class="file-path validate">
+                        </div>
+                    </div>
+                </form>
             </div>
     
+         <!-- submit button -->
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button type="submit" class="btn-large teal darken-3 text-shadow">
+                        Add Trail <i class="fab fa-pagelines right right"></i>
+                    </button>
+                </div>
+            </div>
         </form>
 
     </div>
