inserted footer to base file and styled in css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,3 +5,13 @@
 .flashes h4 {
     line-height: 2;
 }
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
