added jquiery function for images on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,13 @@
               <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
             </div>
             <div class="row center">
-              <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+              <a href="login.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
             </div>
             <br><br>
     
           </div>
         </div>
-        <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="/static/images/background1.jpg" alt="Unsplashed background img 1"></div>
       </div>
     
     
@@ -65,7 +65,7 @@
             </div>
           </div>
         </div>
-        <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+        <div class="parallax"><img src="/static/images/background2.jpg" alt="Unsplashed background img 2"></div>
       </div>
     
       <div class="container">
