--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     
           </div>
         </div>
-        <div class="parallax"><img src="/static/images/background1.jpg" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="/static/images/background_image4.jpeg" alt="Unsplashed background img 1"></div>
       </div>
     
     
@@ -65,7 +65,7 @@
             </div>
           </div>
         </div>
-        <div class="parallax"><img src="/static/images/background2.jpg" alt="Unsplashed background img 2"></div>
+        <div class="parallax"><img src="/static/images/background_image3.jpeg" alt="Unsplashed background img 2"></div>
       </div>
     
       <div class="container">
@@ -91,7 +91,7 @@
             </div>
           </div>
         </div>
-        <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+        <div class="parallax"><img src="/static/images/background_image5.jpg" alt="Unsplashed background img 3"></div>
       </div>
 </body>
 {% endblock %}
