--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
         <div class="section no-pad-bot">
           <div class="container">
             <br><br>
-            <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+            <h1 class="header center teal-text text-lighten-2">TrailMixer: Join our community to discover the best hiking trails in Andalucia.</h1>
             <div class="row center">
-              <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+              <h5 class="header col s12 light">Let's share and explore the Andalucian trails together</h5>
             </div>
             <div class="row center">
               <a href="login.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
@@ -16,7 +16,7 @@
     
           </div>
         </div>
-        <div class="parallax"><img src="/static/images/background_image4.jpeg" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="/static/images/background_image4.jpeg" alt="resevoir"></div>
       </div>
     
     
@@ -27,28 +27,28 @@
           <div class="row">
             <div class="col s12 m4">
               <div class="icon-block">
-                <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+                <h2 class="center brown-text"><i class="material-icons">Share</i></h2>
                 <h5 class="center">Speeds up development</h5>
     
-                <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+                <p class="light">Find trails near you.</p>
               </div>
             </div>
     
             <div class="col s12 m4">
               <div class="icon-block">
-                <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-                <h5 class="center">User Experience Focused</h5>
+                <h2 class="center brown-text"><i class="material-icons">Search</i></h2>
+                <h5 class="center">Choose a level that suits you.</h5>
     
-                <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+                <p class="light">Choose between two types of route, Loop and point to point.</p>
               </div>
             </div>
     
             <div class="col s12 m4">
               <div class="icon-block">
-                <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                <h5 class="center">Easy to work with</h5>
+                <h2 class="center brown-text"><i class="material-icons">Sign up for free.</i></h2>
+                <h5 class="center">Upload your photos and maps to share with other users.</h5>
     
-                <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+                <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid numquam error dignissimos, recusandae sit nihil molestiae alias fugiat cumque quia eveniet eum nostrum? Esse velit eaque assumenda fuga eius voluptate..</p>
               </div>
             </div>
           </div>
@@ -61,11 +61,11 @@
         <div class="section no-pad-bot">
           <div class="container">
             <div class="row center">
-              <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+              <h5 class="header col s12 light">Lorem ipsum dolor sit amet consectetur </h5>
             </div>
           </div>
         </div>
-        <div class="parallax"><img src="/static/images/background_image3.jpeg" alt="Unsplashed background img 2"></div>
+        <div class="parallax"><img src="/static/images/background_image3.jpeg" alt="mountain_picnic"></div>
       </div>
     
       <div class="container">
@@ -87,11 +87,11 @@
         <div class="section no-pad-bot">
           <div class="container">
             <div class="row center">
-              <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+              <h5 class="header col s12 light">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h5>
             </div>
           </div>
         </div>
-        <div class="parallax"><img src="/static/images/background_image5.jpg" alt="Unsplashed background img 3"></div>
+        <div class="parallax"><img src="/static/images/background_image5.jpg" alt="misty_mountain"></div>
       </div>
 </body>
 {% endblock %}
