--- a/templates/add_trail.html
+++ b/templates/add_trail.html
@@ -29,7 +29,7 @@
                     <i class="prefix light-blue-text text-darken-4"></i>
                 <select id="trail_difficulty" name="trail_difficulty"
                 class="validate" required>
-                  <option value="0" >Choose Difficulty</option>
+                  <option value="0" >Level</option>
                   <option value="1">Easy</option>
                   <option value="2">Moderate</option>
                   <option value="3">Hard</option>
