--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <div class="section no-pad-bot">
           <div class="container">
             <br><br>
-            <h1 class="header center teal-text text-lighten-2">TrailMixer: Join our community to discover the best hiking trails in Andalucia.</h1>
+            <h1 class="header center white-text text-shadow text-lighten-2" id="tag-line">Discover the best hiking trails in Andalucia.</h1>
             <div class="row center">
               <h5 class="header col s12 light">Let's share and explore the Andalucian trails together</h5>
             </div>
@@ -27,7 +27,7 @@
           <div class="row">
             <div class="col s12 m4">
               <div class="icon-block">
-                <h2 class="center brown-text"><i class="material-icons">Share</i></h2>
+                <h2 class="center brown-text">Share</h2>
                 <h5 class="center">Speeds up development</h5>
     
                 <p class="light">Find trails near you.</p>
@@ -36,7 +36,7 @@
     
             <div class="col s12 m4">
               <div class="icon-block">
-                <h2 class="center brown-text"><i class="material-icons">Search</i></h2>
+                <h2 class="center brown-text">Discover</h2>
                 <h5 class="center">Choose a level that suits you.</h5>
     
                 <p class="light">Choose between two types of route, Loop and point to point.</p>
@@ -45,7 +45,7 @@
     
             <div class="col s12 m4">
               <div class="icon-block">
-                <h2 class="center brown-text"><i class="material-icons">Sign up for free.</i></h2>
+                <h2 class="center brown-text">Search</h2>
                 <h5 class="center">Upload your photos and maps to share with other users.</h5>
     
                 <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid numquam error dignissimos, recusandae sit nihil molestiae alias fugiat cumque quia eveniet eum nostrum? Esse velit eaque assumenda fuga eius voluptate..</p>
