--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
               <h5 class="header col s12 light">Let's share and explore the Andalucian trails together</h5>
             </div>
             <div class="row center">
-              <a href="login.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+              <a href="{{ url_for('login') }}" id="download-button" class="btn-large waves-effect waves-light teal darken-">Get Started</a>
             </div>
             <br><br>
     
