--- a/templates/trails.html
+++ b/templates/trails.html
@@ -1,24 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trails</title>
-</head>
-<body>
-    {% for trail in trails %}
-        {{ trails.trail_title }}<br>
-        {{ trails.trail_address }}<br>
-        {{ trails.trail_created_by }}<br>
-        {{ trails.trail_description }}<br>
-        {{ trails.trail_difficulty }}<br>
-        {{ trails.trail_directions }}<br>
-        {{ trails.trail_elevation }}<br>
-        {{ trails.trail_images }}<br>
-        {{ trails.trail_length }}<br>
-        {{ trails.trail_time }}<br>
-        {{ trails.trail_type }}<br>
-    {% endfor %}
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+
+    <h3 class="light-blue-text text-darken-4 center-align">All Trails</h3>
+
+    <ul class="collapsible">
+        {% for trails in trails %}
+        <li>
+            <div class="collapsible-header white-text light-blue darken-4 text-shadow">
+                <i class="fas fa-caret-down"></i>
+                <strong>{{ trail.trail_title" }}</strong>
+                    
+                {% endif %}
+            </div>
+            <div class="collapsible-body">
+                <strong>{{ trail.trail_address }}</strong>
+                <p>{{ trail.trail_difficulty }}</p>
+                <p>{{ trail.trail_description }}</p>
+                <p>{{ trail.trail_directions }}</p>
+                <p><em>by: {{ task.created_by }}</em></p>
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
+
+{% endblock %}
