--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,11 @@
                 {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    <li><a href="#">Trails</a></li>
                     <li><a href="{{ url_for('add_trail') }}">Add Trail</a></li>
+                
                 {% else %}
-                    <li><a href="{{ url_for('index') }}">Home</a></li>
+                    <li><a href="{{ url_for('get_index') }}">Home</a></li>
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
                 {% endif %}
@@ -41,9 +43,10 @@
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                <li><a href="#">Trails</a></li>
                 <li><a href="{{ url_for('add_trail') }}">Add Trail</a></li>
             {% else %}
-                <li><a href="{{ url_for('get_base') }}">Home</a></li>
+                <li><a href="{{ url_for('get_index') }}">Home</a></li>
                 <li><a href="{{ url_for('login') }}">Log In</a></li>
                 <li><a href="{{ url_for('register') }}">Register</a></li>
             {% endif %}
