--- a/templates/trails.html
+++ b/templates/trails.html
@@ -2,25 +2,18 @@
 {% block content %}
 
     <h3 class="light-blue-text text-darken-4 center-align">All Trails</h3>
+        <div class="white-text light-blue darken-4 text-shadow">
+                
+           
+            <div>
+                <p>{{ trails.trail_address }}</p>
+                <p>{{ trails.trail_difficulty }}</p>
+                <p>{{ trails.trail_description }}</p>
+                <p>{{ trails.trail_directions }}</p>
+                <p><em>by: {{ trails.trail_created_by }}</em></p>
+            </div>
 
-    <ul class="collapsible">
-        {% for trails in trails %}
-        <li>
-            <div class="collapsible-header white-text light-blue darken-4 text-shadow">
-                <i class="fas fa-caret-down"></i>
-                <strong>{{ trail.trail_title" }}</strong>
-                    
-                {% endif %}
-            </div>
-            <div class="collapsible-body">
-                <strong>{{ trail.trail_address }}</strong>
-                <p>{{ trail.trail_difficulty }}</p>
-                <p>{{ trail.trail_description }}</p>
-                <p>{{ trail.trail_directions }}</p>
-                <p><em>by: {{ task.created_by }}</em></p>
-            </div>
-        </li>
-        {% endfor %}
-    </ul>
+        </div>
+   
 
 {% endblock %}
