--- a/templates/base.html
+++ b/templates/base.html
@@ -79,19 +79,19 @@
           <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
         </div>
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
+          <h5 class="white-text">Find us on social media</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            <li><a class="btn btn-secondary btn-floating m-1 pull-right mt-5 ml-2 text-shadow  teal darken-3" id ="footer-icon" href="https://www.facebook.com/" aria-label="first link" target="_blank" rel="noopener" role="button"><i class="fab fa-facebook-f"></i></a></li><br>
+            <li><a class="btn btn-secondary btn-floating m-1 pull-right mt-5 ml-2 text-shadow  teal darken-3" id ="footer-icon" href="https://www.twitter.com/" aria-label="first link" target="_blank" rel="noopener" role="button"><i class="fab fa-twitter"></i></a></li><br>
+            <li><a class="btn btn-secondary btn-floating m-1 pull-right mt-5 ml-2 text-shadow  teal darken-3" id ="footer-icon" href="https://www.instagram.com/" aria-label="first link" target="_blank" rel="noopener" role="button"><i class="fab fa-instagram"></i></a></li><br>
+          
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2014 Copyright Text
+      © 2021 Copyright
       <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
       </div>
     </div>
