--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     
           </div>
         </div>
-        <div class="parallax"><img src="/static/images/background_image4.jpeg" alt="resevoir"></div>
+        <div class="parallax"><img src="/static/images/background_image3new.png" alt="resevoir"></div>
       </div>
     
     
