added text to landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,25 +28,26 @@
             <div class="col s12 m4">
               <div class="icon-block">
                 <h2 class="center brown-text">Share</h2>
-                <h5 class="center">Speeds up development</h5>
+                <h5 class="center">Add your trails</h5>
     
-                <p class="light">Find trails near you.</p>
+                <p class="light">Upload trails to your personal profile page so other users can experience them. <br>This is also an excellent way to keep track of trails you have completed and create your own dashboard. You can also upload photos and chat about your trail with other users.</p>
               </div>
             </div>
     
             <div class="col s12 m4">
               <div class="icon-block">
                 <h2 class="center brown-text">Discover</h2>
-                <h5 class="center">Choose a level that suits you.</h5>
+                <h5 class="center">Find new and exciting trails.</h5>
     
-                <p class="light">Choose between two types of route, Loop and point to point.</p>
+                <p class="light">Explore trails experienced by our users with detailed information on level, type of route, direction and description of trail. <br>
+                You can also get inside knowlege from other users on where to stay, eat, park etc, by using the comments section. </p>
               </div>
             </div>
     
             <div class="col s12 m4">
               <div class="icon-block">
                 <h2 class="center brown-text">Search</h2>
-                <h5 class="center">Upload your photos and maps to share with other users.</h5>
+                <h5 class="center">Find trails in your area</h5>
     
                 <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid numquam error dignissimos, recusandae sit nihil molestiae alias fugiat cumque quia eveniet eum nostrum? Esse velit eaque assumenda fuga eius voluptate..</p>
               </div>
