--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@
             <br><br>
             <h1 class="header center white-text text-shadow text-lighten-2" id="tag-line">Discover the best hiking trails in Andalucia.</h1>
             <div class="row center">
-              <h5 class="header col s12 light">Let's share and explore the Andalucian trails together</h5>
+              <h5 class="header col s12 light">Let's share and explore the Andalucian trails together</h5>xs
             </div>
             <div class="row center">
-              <a href="{{ url_for('login') }}" id="download-button" class="btn-large waves-effect waves-light teal darken-">Get Started</a>
+              <a href="{{ url_for('login') }}" id="download-button" class="btn-large waves-effect waves-light teal darken-3">Get Started</a>
             </div>
             <br><br>
     
