--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,7 +5,7 @@
         <div class="col s12 m8 offset-m2">
             <div class="card-panel">
                 <h3 class="center-align light-blue-text text-darken-4">
-                    {{ username }}'s Profile
+                   Welcome {{ Username }} !
                 </h3>
             </div>
         </div>
