--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                 {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-                    <li><a href="#">Trails</a></li>
+                    <li><a href="{{ url_for('trails') }}">Trails</a></li>
                     <li><a href="{{ url_for('add_trail') }}">Add Trail</a></li>
                 
                 {% else %}
@@ -44,7 +44,7 @@
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-                <li><a href="#">Trails</a></li>
+                <li><a href="{{ url_for('trails') }}">Trails</a></li>
                 <li><a href="{{ url_for('add_trail') }}">Add Trail</a></li>
             {% else %}
                 <li><a href="{{ url_for('get_index') }}">Home</a></li>
