--- a/templates/trails.html
+++ b/templates/trails.html
@@ -1,34 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue-text text-darken-4 center-align">All Trails</h3>
-        <div class="white-text light-blue darken-4 text-shadow">
-                
-           
-            <div>
-                <p>{{ trails.trail_address }}</p>
-                <p>{{ trails.trail_difficulty }}</p>
-                <p>{{ trails.trail_description }}</p>
-                <p>{{ trails.trail_directions }}</p>
-                <p><em>by: {{ trails.trail_created_by }}</em></p>
+    <ul class="collapsible">
+        {% for trail in trails %}
+        <li>
+            <div class="collapsible-header white-text light-blue darken-4 text-shadow">
+                <i class="fas fa-caret-down"></i>
+                <strong>{{ trail.trail_title}}</strong> : {{ trail.trail_address }}
+               
             </div>
-
-        </div>
-
-        <ul class="collapsible">
-            <li>
-                <div class="collapsible-header white-text light-blue darken-4 text-shadow"><i class="fas fa-caret-down"></i>First</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-            </li>
-            <li>
-                <div class="collapsible-header white-text light-blue darken-4 text-shadow"><i class="fas fa-caret-down"></i>Second</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-            </li>
-            <li>
-                <div class="collapsible-header white-text light-blue darken-4 text-shadow"><i class="fas fa-caret-down"></i>Third</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-            </li>
-        </ul>
-   
+            <div class="collapsible-body">
+                <strong>{{ trail.trail_description }}</strong>
+                <p>{{ trail.trail_difficulty }}</p>
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
 
 {% endblock %}
