added collapsable function to scripts.js

--- a/templates/trails.html
+++ b/templates/trails.html
@@ -11,7 +11,9 @@
             </div>
             <div class="collapsible-body">
                 <strong>{{ trail.trail_description }}</strong>
+                <strong>{{ trail.trail_directions }}</strong>
                 <p>{{ trail.trail_difficulty }}</p>
+                <p>{{ trail.trail_created_by }}</p>
             </div>
         </li>
         {% endfor %}
