restyled the collapsable form

--- a/templates/trails.html
+++ b/templates/trails.html
@@ -4,7 +4,7 @@
     <ul class="collapsible">
         {% for trail in trails %}
         <li>
-            <div class="collapsible-header white-text light-blue darken-4 text-shadow">
+            <div class="collapsible-header black-text teal lighten-5 text-shadow-white">
                 <i class="fas fa-caret-down"></i>
                 <strong>{{ trail.trail_title}}</strong> : {{ trail.trail_address }}
                
