added edit and done buttons to trails page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,14 @@ h2 {
     line-height: 2;
 }
 
+.btn-small {
+  margin: 5px;
+}
+
+.collapsible-header .col strong {
+  margin: 5px;
+  line-height: 42px;
+}
   main {
     flex: 1 0 auto;
   }
