--- a/templates/trails.html
+++ b/templates/trails.html
@@ -5,9 +5,15 @@
         {% for trail in trails %}
         <li>
             <div class="collapsible-header black-text teal lighten-5 text-shadow-white">
-                <i class="fas fa-caret-down"></i>
-                <strong>{{ trail.trail_title}}</strong> : {{ trail.trail_address }}
-               
+                <div class="col s3">
+                    <i class="fas fa-caret-down"></i>
+                    <a href="" class="btn-small brown darken-4">Done</a>
+                    <a href="" class="btn-small teal darken-3">Edit</a>
+                </div>
+                    <div class="col s9">
+                        
+                        <strong>{{ trail.trail_title}}</strong> : {{ trail.trail_address }}
+                    </div>
             </div>
             <div class="collapsible-body">
                 <strong>{{ trail.trail_description }}</strong>
