--- a/templates/trails.html
+++ b/templates/trails.html
@@ -8,7 +8,7 @@
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                     <a href="" class="btn-small brown darken-4">Done</a>
-                    <a href="" class="btn-small teal darken-3">Edit</a>
+                    <a href="{{ url_for('edit_trail', trail_id=trail._id) }}" class="btn-small teal darken-3">Edit</a>
                 </div>
                     <div class="col s9">
                         
