added links for hike info on footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
           {% if messages %}
               {% for message in messages %}
                   <div class="row flashes">
-                      <h4 class="teal lighten-4 center-align">{{ message }}</h4>
+                      <h4 class="teal lighten-3 center-align">{{ message }}</h4>
                   </div>
               {% endfor %}
           {% endif %}
@@ -86,11 +86,15 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          <h5 class="white-text">Some of the most popular trails in Andalucia:</h5>
+          <i class="fas fa-mountain"></i><p class="grey-text text-lighten-4"><a class="grey-text text-lighten-4 left" href="https://andaluciahiking.com/mulhacen-hiking/!">Mulhacen, Granada</a></p><br>
+          <p class="grey-text text-lighten-4"><a class="grey-text text-lighten-4 left" href="https://andaluciahiking.com/pico-de-veleta/!">Pico de Veleta, Granada</a></p><br>
+          <p class="grey-text text-lighten-4"><a class="grey-text text-lighten-4 left" href="https://andaluciahiking.com/hike-siete-lagunas-trevelez-sierra-nevada-national-park!">Siete Lagunas, Granada</a></p><br>
+          <p class="grey-text text-lighten-4"><a class="grey-text text-lighten-4 left" href="https://www.survivingmalaga.com/hiking-in-malaga-rio-chillar-river-walk/!">Rio Chillar, Malaga</a></p><br>
+          <p class="grey-text text-lighten-4"><a class="grey-text text-lighten-4 left" href="https://andaluciahiking.com/el-caminito-del-rey-malaga-hike/!">El Caminito del Rey, Malaga</a></p><br>
         </div>
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Find us on social media</h5>
+          <h5 class="white-text">Follow us on social media</h5>
           <ul>
             <li><a class="btn btn-secondary btn-floating m-1 pull-right mt-5 ml-2 text-shadow  teal darken-3" id ="footer-icon" href="https://www.facebook.com/" aria-label="first link" target="_blank" rel="noopener" role="button"><i class="fab fa-facebook-f"></i></a></li><br>
             <li><a class="btn btn-secondary btn-floating m-1 pull-right mt-5 ml-2 text-shadow  teal darken-3" id ="footer-icon" href="https://www.twitter.com/" aria-label="first link" target="_blank" rel="noopener" role="button"><i class="fab fa-twitter"></i></a></li><br>
@@ -102,8 +106,8 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2021 Copyright
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      © 2021 TrailMixer
+     
       </div>
     </div>
   </footer>
