--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
             <br><br>
             <h1 class="header center white-text text-shadow text-lighten-2" id="tag-line">Discover the best hiking trails in Andalucia.</h1>
             <div class="row center">
-              <h5 class="header col s12 light">Let's share and explore the Andalucian trails together</h5>xs
+              <h5 class="header col s12 light">Let's share and explore the Andalucian trails together</h5>
             </div>
             <div class="row center">
               <a href="{{ url_for('login') }}" id="download-button" class="btn-large waves-effect waves-light teal darken-3">Get Started</a>
@@ -16,7 +16,7 @@
     
           </div>
         </div>
-        <div class="parallax"><img src="/static/images/background_image3new.png" alt="resevoir"></div>
+        <div class="parallax"><img src="/static/images/background_image5.jpg" alt="resevoir"></div>
       </div>
     
     
@@ -37,7 +37,7 @@
             <div class="col s12 m4">
               <div class="icon-block">
                 <h2 class="center brown-text">Discover</h2>
-                <h5 class="center">Find new and exciting trails.</h5>
+                <h5 class="center">Learn from others</h5>
     
                 <p class="light">Explore trails experienced by our users with detailed information on level, type of route, direction and description of trail. <br>
                 You can also get inside knowlege from other users on where to stay, eat, park etc, by using the comments section. </p>
@@ -47,9 +47,9 @@
             <div class="col s12 m4">
               <div class="icon-block">
                 <h2 class="center brown-text">Search</h2>
-                <h5 class="center">Find trails in your area</h5>
+                <h5 class="center">Find trails</h5>
     
-                <p class="light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid numquam error dignissimos, recusandae sit nihil molestiae alias fugiat cumque quia eveniet eum nostrum? Esse velit eaque assumenda fuga eius voluptate..</p>
+                <p class="light">Search for trails which suit your needs. Wheather it be easy, moderate or hard level. Search for type of trail, loop or point to point. Search for a type of terrain; mountainous, flat, river walks. Whatever you are looking for, you are sure to find using the search option. </p>
               </div>
             </div>
           </div>
@@ -62,7 +62,7 @@
         <div class="section no-pad-bot">
           <div class="container">
             <div class="row center">
-              <h5 class="header col s12 light">Lorem ipsum dolor sit amet consectetur </h5>
+              <h5 class="header col s12 ">Sky above, earth below, peace within. </h5>
             </div>
           </div>
         </div>
@@ -75,8 +75,10 @@
           <div class="row">
             <div class="col s12 center">
               <h3><i class="mdi-content-send brown-text"></i></h3>
-              <h4>Contact Us</h4>
-              <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+              <h4>TrailMixer</h4>
+              <p class="left-align light">The Andalusian countryside abounds in natural blessings, from snow-topped mountains to fertile plains, vast dune beaches to delta marshes teeming with birdlife. The region has the highest proportion of its territory dedicated to protected national and natural parks of any in Spain (numbering 26 in total) as well as the greatest biodiversity in fauna and flora, and a climate that surprises in its variety, but where sunshine is seldom lacking.</p> <br> 
+              <p>Andalusia is also one of Europe's least densely populated areas meaning that “getting off the beaten track” requires no great art and yields some rich rewards. The inspiration for this site comes from the desire to share our discoveries of this very special place.</p>
+
             </div>
           </div>
     
@@ -88,11 +90,11 @@
         <div class="section no-pad-bot">
           <div class="container">
             <div class="row center">
-              <h5 class="header col s12 light">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h5>
+              <h5 class="header col s12">All good things are wild and free.</h5>
             </div>
           </div>
         </div>
-        <div class="parallax"><img src="/static/images/background_image5.jpg" alt="misty_mountain"></div>
+        <div class="parallax"><img src="/static/images/background_image3new.png" alt="misty_mountain"></div>
       </div>
 </body>
 {% endblock %}
