styled login and registration buttons and changed colours of headings

--- a/templates/login.html
+++ b/templates/login.html
@@ -37,7 +37,7 @@
     <div class="col s12">
         <p class="center-align">
             New Here?
-            <a href="{{ url_for('register') }}" class="teal darken-3">Register Account</a>
+            <a href="{{ url_for('register') }}" class="brown-text teal-darken-4">Register Account</a>
         </p>
     </div>
 </div>
