--- a/templates/register.html
+++ b/templates/register.html
@@ -61,7 +61,7 @@
     <div class="col s12">
         <p class="center-align">
             Already registered?
-            <a href="{{ url_for('login') }}" class="teal darken-3">Log In</a>
+            <a href="{{ url_for('login') }}" class="brown-text">Log In</a>
         </p>
     </div>
 </div>
