--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,6 +30,11 @@ h2 {
     text-transform: uppercase;
     font-size: 2em;
 }
+
+h3 {
+  text-transform: uppercase;
+  font-size: 2em;
+}
 .flashes h4 {
     line-height: 2;
 }
