--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
           {% if messages %}
               {% for message in messages %}
                   <div class="row flashes">
-                      <h4 class="teal lighten-3 center-align">{{ message }}</h4>
+                      <h4 class="teal lighten-5  center-align">{{ message }}</h4>
                   </div>
               {% endfor %}
           {% endif %}
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Some of the most popular trails in Andalucia:</h5>
-          <i class="fas fa-mountain"></i><p class="grey-text text-lighten-4"><a class="grey-text text-lighten-4 left" href="https://andaluciahiking.com/mulhacen-hiking/!">Mulhacen, Granada</a></p><br>
+          <i class="fas fa-mountain teal"></i><p class="grey-text text-lighten-4"><a class="grey-text text-lighten-4 left" href="https://andaluciahiking.com/mulhacen-hiking/!">Mulhacen, Granada</a></p><br>
           <p class="grey-text text-lighten-4"><a class="grey-text text-lighten-4 left" href="https://andaluciahiking.com/pico-de-veleta/!">Pico de Veleta, Granada</a></p><br>
           <p class="grey-text text-lighten-4"><a class="grey-text text-lighten-4 left" href="https://andaluciahiking.com/hike-siete-lagunas-trevelez-sierra-nevada-national-park!">Siete Lagunas, Granada</a></p><br>
           <p class="grey-text text-lighten-4"><a class="grey-text text-lighten-4 left" href="https://www.survivingmalaga.com/hiking-in-malaga-rio-chillar-river-walk/!">Rio Chillar, Malaga</a></p><br>
@@ -104,7 +104,7 @@
         </div>
       </div>
     </div>
-    <div class="footer-copyright">
+    <div class="footer-copyright center">
       <div class="container">
       © 2021 TrailMixer
      
