--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,8 +3,8 @@
 
     <div class="row">
         <div class="col s12 m8 offset-m2">
-            <div class="card-panel">
-                <h3 class="center-align light-blue-text text-darken-4">
+            <div class="card-panel grey lighten-5">
+                <h3 class="center-align brown-text text-darken-4">
                     {{ username }}'s Profile
                 </h3>
             </div>
