changed images on index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <div class="col s12 m4">
               <div class="icon-block">
                 <h2 class="center brown-text">Share</h2>
-                <h5 class="center">Add your trails</h5>
+                <h5 class="center">Add Trails</h5>
     
                 <p class="light">Upload trails to your personal profile page so other users can experience them. <br>This is also an excellent way to keep track of trails you have completed and create your own dashboard. You can also upload photos and chat about your trail with other users.</p>
               </div>
@@ -37,7 +37,7 @@
             <div class="col s12 m4">
               <div class="icon-block">
                 <h2 class="center brown-text">Discover</h2>
-                <h5 class="center">Learn from others</h5>
+                <h5 class="center">New Trails</h5>
     
                 <p class="light">Explore trails experienced by our users with detailed information on level, type of route, direction and description of trail. <br>
                 You can also get inside knowlege from other users on where to stay, eat, park etc, by using the comments section. </p>
@@ -47,7 +47,7 @@
             <div class="col s12 m4">
               <div class="icon-block">
                 <h2 class="center brown-text">Search</h2>
-                <h5 class="center">Find trails</h5>
+                <h5 class="center">Find Trails</h5>
     
                 <p class="light">Search for trails which suit your needs. Wheather it be easy, moderate or hard level. Search for type of trail, loop or point to point. Search for a type of terrain; mountainous, flat, river walks. Whatever you are looking for, you are sure to find using the search option. </p>
               </div>
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-        <div class="parallax"><img src="/static/images/background_image3new.png" alt="misty_mountain"></div>
+        <div class="parallax"><img src="/static/images/background_image4.jpeg" alt="misty_mountain"></div>
       </div>
 </body>
 {% endblock %}
