uploaded mokups to README file

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-<body>
-    <div id="index-banner" class="parallax-container">
+  <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
           <div class="container">
             <br><br>
-            <h1 class="header center white-text text-shadow text-lighten-2" id="tag-line">Discover the best hiking trails in Andalucia.</h1>
+            <h1 class="header center white-text text-shadow text-lighten-2" id="tag-line">Discover the best hiking trails in Andalucia</h1>
             <div class="row center">
               <h5 class="header col s12 light">Let's share and explore the Andalucian trails together</h5>
             </div>
@@ -57,7 +56,6 @@
         </div>
       </div>
     
-    
       <div class="parallax-container valign-wrapper">
         <div class="section no-pad-bot">
           <div class="container">
@@ -74,8 +72,7 @@
     
           <div class="row">
             <div class="col s12 center">
-              <h3><i class="mdi-content-send brown-text"></i></h3>
-              <h4>TrailMixer</h4>
+              <h4 class="brown-text">TrailMixer</h4>
               <p class="left-align light">The Andalusian countryside abounds in natural blessings, from snow-topped mountains to fertile plains, vast dune beaches to delta marshes teeming with birdlife. The region has the highest proportion of its territory dedicated to protected national and natural parks of any in Spain (numbering 26 in total) as well as the greatest biodiversity in fauna and flora, and a climate that surprises in its variety, but where sunshine is seldom lacking.</p> <br> 
               <p>Andalusia is also one of Europe's least densely populated areas meaning that “getting off the beaten track” requires no great art and yields some rich rewards. The inspiration for this site comes from the desire to share our discoveries of this very special place.</p>
 
@@ -96,5 +93,5 @@
         </div>
         <div class="parallax"><img src="/static/images/background_image4.jpeg" alt="misty_mountain"></div>
       </div>
-</body>
+
 {% endblock %}
